--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-<link href="surveyform.css" rel="stylesheet">
+<link href="survey-form.css" rel="stylesheet">
 <title>Survey Form Project</title>
     </head>
     <header><h1 id="title">Survey Form Project</header>
